--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 
-<html>
-
+<html lang='en' dir='ltr'>
 <head>
-    <title>Shopping List's with JACC</title>
+    <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
-    <!-- //web font -->
+    <title>Shopping List's with JACC</title>
+    <link href="css/style.css" rel="stylesheet">
+    <script src ='/js/index.js'></script>
 </head>
 
 <body>
