--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,2 +1,6 @@
-<h1>Shopping List</h1>
-<h2>Our team!!!</h2>
+{{> header}}
+
+<h2>Hello User</h2>
+
+<button type="submit">Begin</button>
+{{> footer}}
