--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 
 <html lang='en' dir='ltr'>
-<head>
-    <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shopping List's with JACC</title>
-    <link href="css/style.css" rel="stylesheet">
-    <script src ='/js/index.js'></script>
-</head>
+
+{{> head}}
 
 <body>
+
     {{{body}}}
+    
 </body>
 
 </html>
