updated form layout

--- a/src/views/partials/form-display.hbs
+++ b/src/views/partials/form-display.hbs
@@ -1,12 +1,17 @@
-<form id="shopping-form" action="/shopping-list" method="get">
-  <div class="form-item">
-    <p>Item</p>
-  </div>
-  <div class="form-item">
-    <p>Quantity</p>
-  </div>
-  <div class="form-item">
-    <p>Approximate price</p>
+<form id="shopping-display" action="/shopping-list" method="get">
+  <div class="form-grid">
+    <div class="form-item item-border">
+      <p>Name</p>
+    </div>
+    <div class="form-item item-border">
+      <p>Item</p>
+    </div>
+    <div class="form-item item-border">
+      <p>Quantity</p>
+    </div>
+    <div class="form-item item-border">
+      <p>Approximate price</p>
+    </div>
   </div>
   <button type="submit">Add your item</button>
 </form>
