--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,16 +16,29 @@ body{
   font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
+  background-image: url('../images/shop-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-h1{
+.bk-page {
+  background-color: rgba(255,255,255,0.6);
+  width: 90%;
+  border-radius: 20px;
+  padding: 30px 10px;
+  margin: auto;
+}
+
+h1 a {
   font-size: 2rem;
   display: flex;
   justify-content: center;
+  color: var(--black-color);
+  text-decoration: none;
 }
 
 .wrapper{
-  height: 500px;
+  min-height: 500px;
 }
 
 .h2-greeting{
@@ -37,6 +50,13 @@ h1{
 .margin--left{
   margin-left: 100px;
 }
+.margin--top {
+  margin-top: 100px;
+}
+
+.align-center {
+  text-align: center;
+}
 
 .background--yellow{
   background-color: var(--yellow-color);
@@ -47,16 +67,22 @@ h1{
   margin: 0 auto;
   z-index: -100;
   left:400px;
+  border: 20px solid rgba(255, 255, 255, 0.5);
 }
 .font--red{
   color: var(--red-color);
 }
-h2{
+.home-h2 {
   font-size: 6rem;
   font-family: 'Oleo Script', cursive;
   margin: 10px auto;
   padding: 40px;
   width: 440px;
+}
+
+h2 {
+  font-family: 'Oleo Script', cursive;
+  font-size: 3rem;
 }
 
 footer{
@@ -75,12 +101,44 @@ footer p {
 
 /*Form styles*/
 form {
-  width: 60%;
   min-width: 350px;
 }
 
-.form-item input {
-  width: 70%;
+.form-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 4fr);
+  grid-template-rows: repeat(2, 2fr);
+  margin: auto;
+  width: 80%;
+}
+.item-border {
+  border-bottom: 2px solid var(--black-color);
 }
 
+.form-item p {
+  text-align: center;
+}
 
+#shopping-form {
+  margin: 10px auto;
+  width: 40%;
+}
+
+#shopping-form:last-child {
+  display: block;
+}
+
+.form-item input {
+  width: 100%;
+  height: 40px;
+  padding: 13px;
+  /* font-weight: 100; */
+}
+
+form button {
+  margin: 20px auto;
+  text-align: center;
+  width: 200px;
+  height: 30px;
+  display: block;
+}
