add to the views

--- a/src/views/currentList.hbs
+++ b/src/views/currentList.hbs
@@ -1,7 +1,10 @@
 {{> header}}
 
-<h2>Here's your current list</h2>
-
-  {{> form-display}}
-
+<div class='wrapper'>
+  <div class="bk-page">
+    <h2 class="align-center">Here's your current list</h2>
+    {{> form-display}}
+  </div>
+  </div>
+<div class="margin--top"></div>
 {{> footer}}
