--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,9 +1,11 @@
 {{> header}}
 <div class='wrapper'>
     <main class='background--yellow'>
-        
+
     </main>
-<h2><span class='h2-greeting'>Hello</span><br><span class='margin--left'>Jane <span class='font--red'>Doe</span></span></h2>
+  <h2 class="home-h2">
+    <span class='h2-greeting'>Hello</span><br><span class='margin--left'>Jane <span class='font--red'>Doe</span></span>
+  </h2>
 
 <button type="submit">Begin</button>
 </div>
