--- a/src/views/shoppingList.hbs
+++ b/src/views/shoppingList.hbs
@@ -1,7 +1,11 @@
 {{> header}}
 
-<h2>Our shopping list </h2>
+<div class='wrapper'>
+<div class="bk-page">
+  <h2 class="align-center">Our shopping list </h2>
 
-  {{> form-entry}}
-
+    {{> form-entry}}
+  </div>
+</div>
+<div class="margin--top"></div>
 {{> footer}}
