--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shopping List's with JACC</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script" rel="stylesheet">
     <script src ='/js/index.js'></script>
 </head>
