added link to shopping-list

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -7,7 +7,7 @@
     <span class='h2-greeting'>Hello</span><br><span class='margin--left'>Jane <span class='font--red'>Doe</span></span>
   </h2>
 
-<button type="submit">Begin</button>
+<button type="submit" onclic="window.location.href='/shopping-list'">Begin</button>
 </div>
 
 {{> footer}}
