database insert func

--- a/src/views/partials/form-entry.hbs
+++ b/src/views/partials/form-entry.hbs
@@ -1,5 +1,7 @@
-<form id="shopping-form" action="/" method="post">
+<form id="shopping-form" action="/shopping-list" method="post">
   <div class="form-item">
+    <p>Name</p>
+    <input type="text" name="name" placeholder="Name"/>
     <p>Item</p>
     <input type="text" name="item" placeholder="What would you like to buy?"/>
   </div>
