--- a/src/views/partials/form-entry.hbs
+++ b/src/views/partials/form-entry.hbs
@@ -1,4 +1,4 @@
-<form id="shopping-form" action="/current-list" method="post">
+<form id="shopping-form" action="/shopping-list" method="post">
   <div class="form-item">
     <p>Name</p>
     <input type="text" name="name" placeholder="Tell us your fullname"/>
