--- a/src/views/currentList.hbs
+++ b/src/views/currentList.hbs
@@ -4,6 +4,14 @@
   <div class="bk-page">
     <h2 class="align-center">Here's your current list</h2>
     {{> form-display}}
+    <!-- <h2>{{list}}</h2> -->
+    <ul>
+      {{#each list}}
+        <li>name: {{this.full_name}} item: {{this.item}} quantity: {{this.quantity}} price: {{this.price}}</li>
+      {{/each}}
+    </ul>
+
+
   </div>
   </div>
 <div class="margin--top"></div>
