--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,10 @@ h1 a {
   justify-content: center;
   color: var(--black-color);
   text-decoration: none;
-  /* background-color: rgba(255,255,255,0.6); */
+  background-color: rgba(24,164,143,0.6);
+  width: 180px;
+  padding: 10px;
+  margin: auto;
 }
 
 .wrapper{
